--- a/app/src/main/res/layout/following_view_content.xml
+++ b/app/src/main/res/layout/following_view_content.xml
@@ -12,6 +12,8 @@
         android:textSize="15sp"
         android:textStyle="bold|italic"
         android:textColor="@color/blue"
+        android:clickable="true"
+        android:focusable="true"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toStartOf="@id/unfollow_button"/>
